tests/snapshots/cli_integration__runtime_help.snap
---
source: tests/cli_integration.rs
assertion_line: 44
expression: stdout
---
This runtime installs a conda environment from a stamped lockfile.

After bootstrap, commands are passed through to the configured delegate executable.

Usage: cs-template [OPTIONS] [COMMAND]

Commands:
  bootstrap  Bootstrap a fresh conda installation into the install path
  status     Print runtime status (install path, channels, packages)
  shell      Activate an environment via subshell (alias for conda spawn)
  uninstall  Uninstall this runtime: remove the install path and environments
  help       Show this help message

Options:
  -v, --verbose
          Increase output detail

  -q, --quiet
          Suppress non-essential output

      --path <PATH>
          Runtime install path to use instead of the stamped default

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Quick start:

  cs-template bootstrap                           Install conda into ~/.conda/cs-template
  cs-template create -n myenv python=3.12 numpy   Create an environment
  cs-template shell myenv                         Activate (spawns a subshell)
  exit                                   Leave the environment

Management:

  cs-template status                              Show installation details
  cs-template uninstall                           Remove the install path and environments

Pass-through:

  Any command not listed above is passed through to conda:
  cs-template install, cs-template remove, cs-template list, cs-template env, cs-template info, cs-template config, ...

Docs: https://jezdez.github.io/conda-ship/
